Added support for resizing and custom size. Lora strength support.