@@ -3,13 +3,19 @@ package com.nilsson.metadataviewer;
 public class ToDo {
 
 
-    //TODO -> Resizable
-    //TODO -> Better Lora Support
-    //TODO -> Lora Weights
-    //TODO -> Language Support
 
+    /* CMD code
 
+    jpackage ^
+            --input staging ^
+            --name "MetadataViewer" ^
+            --main-jar MetadataViewer-1.0.3-SNAPSHOT.jar ^
+            --main-class com.nilsson.metadataviewer.Launcher ^
+            --type app-image ^
+            --icon src/main/resources/icon.ico ^
+            --app-version 1.0.3 ^
+            --vendor "Alexander Nilsson" ^
+            --add-modules java.se,jdk.unsupported,jdk.charsets
 
-
-
+            */
 }
